--- a/bucket/index.html
+++ b/bucket/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        h1 {
-            color: #000000;
-            background-color: #ffffff;
-        }
-
+        <style>
+            h1 {
+                color: #000000;
+                background-color: #ffffff;
+            }
+        </style>
     </head>
     <body>
         <h1>Welcome to Mayoct!</h1>
