Update straw background

--- a/bucket/index.html
+++ b/bucket/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <style>
+            body {
+                background-image: url('./images/straw.jpg');
+            }
             h1 {
                 color: #000000;
                 background-color: #ffffff;
