--- a/bucket/index.html
+++ b/bucket/index.html
@@ -3,7 +3,7 @@
     <head>
         <style>
             body {
-                background-image: url('./images/brick.jpg');
+                background-image: url('./images/straw.jpg');
             }
             h1 {
                 color: #000000;
